[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotalabs-comply"
version = "1.0.0"
description = "AI compliance and audit logging infrastructure with multi-framework support"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Subhadip Mitra", email = "subhadip@rotalabs.ai" },
    { name = "Rotalabs Research", email = "research@rotalabs.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
keywords = [
    "ai",
    "compliance",
    "audit",
    "logging",
    "eu-ai-act",
    "soc2",
    "hipaa",
    "gdpr",
    "security",
    "privacy",
]

dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.28.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "rotalabs-comply[s3]",
]

[project.urls]
Homepage = "https://rotalabs.ai"
Repository = "https://github.com/rotalabs/rotalabs-comply"
Documentation = "https://rotalabs.github.io/rotalabs-comply/"

[tool.hatch.build.targets.wheel]
packages = ["src/rotalabs_comply"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["rotalabs_comply"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
